# PolyglotAI

./: .env.example  .gitignore  LICENSE  README.md  chatbot.py  config.yaml  pyproject.toml  requirements.txt
config/: config.yaml
data/conversations/: 46e2373b-249f-4580-97db-14a148896dd1.json  conversations_index.json
src/: __init__.py
src/adapters/llm_adapter/: adapter_interface.py  openai_adapter.py
src/agents/: agent_interface.py  base_agent.py  conversational_agent.py  exercise_agent.py  tmp.py  tutor_agent.py
src/agents/azure/: agents.py
src/application/: __init__.py
src/application/commands/: __init__.py  conversations.py
src/application/commands/dtos/: __init__.py  send_message.py
src/application/commands/use_cases/: __init__.py  send_message.py
src/application/dto/: __init__.py  chat_dto.py  learning_dto.py
src/application/dtos/: __init__.py  conversations.py  students.py
src/application/ports/: __init__.py  conversation_reader.py  conversations.py  student_reader.py  students.py
src/application/queries/: __init__.py  conversations.py
src/application/queries/read_models/: __init__.py  conversation_summary.py  student_summary.py
src/application/services/: __init__.py  chat_service_impl.py  error_tracking_service.py  extraction_service.py  vocabulary_service.py
src/application/use_cases/: __init__.py  process_message.py  record_vocabulary.py  retrieve_learning_context.py  track_error.py
src/clients/: azure_client.py
src/clients/config/: azure_config.py  config_interface.py
src/core/: __init__.py  enums.py  types.py
src/core/domain/: __init__.py
src/core/domain/entities/: __init__.py  base.py  chat_message.py  conversation.py  grammar_rule.py  learning.py  learning_session.py  student.py  user.py  user_error.py  user_profile.py  vocabulary_item.py
src/core/domain/value_objects/: __init__.py  cefr_level.py  chat_options.py  error_type.py  language.py  language_pair.py  linguistics.py  mastery_level.py  part_of_speech.py  role.py  status.py  teacher_profile.py  tutor_profile.py  vocab_source.py
src/core/exceptions/: __init__.py  ai_exceptions.py  base.py  business.py  domain_exceptions.py  infrastructure.py  resources.py
src/core/ports/: __init__.py  chat_provider.py  system_time_provider.py  time_provider.py
src/core/ports/driven/: __init__.py  ai_provider_factory.py  chat_model.py  embedder.py  graph_memory.py  user_repository.py  vocabulary_repository.py
src/core/ports/driver/: __init__.py  (+2 more)
src/exceptions/: llm_exceptions.py
src/factories/: agent_factory.py  llm_factory.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py
src/infrastructure/ai/: __init__.py  base_openai_client.py  client.py  ollama_client.py  provider_registry.py
src/infrastructure/config/: __init__.py  base.py  logging.py  settings.py
src/infrastructure/graph/: __init__.py  graphiti_adapter.py  neo4j_connection.py
src/infrastructure/persistence/: __init__.py  in_memory.py
src/managers/: chat_manager.py
src/models/: config_model.py  conversation_model.py  model.py  user_model.py
src/services/: __init__.py  azure_service.py  service_facade.py  service_interface.py
src/services/builders/: __init__.py  azure_builder.py  builder_interface.py
src/services/llm/: azure_llm_services.py  llm_factory.py
src/services/memory/: memory_service.py
src/services/providers/: azure_llm.py  provider_llm.py
src/utils/: config.py  fixtures.py  logger.py  prompts.py  utils.py
tests/: conftest.py
tests/application/use_case/: conftest.py  test_create_conversation.py  test_delete_conversation.py  test_list_conversation.py  test_select_conversation.py  test_send_message.py
tests/doubles/: __init__.py
tests/doubles/fakes/: __init__.py  in_memory_conversation_repository.py
tests/doubles/stubs/: __init__.py  time_provider_stub.py
tests/infrastructure/ai/: test_base_openai_client.py  test_ollama.py
(+99 files in other folders)
