[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyglot-ai"
version = "0.1.0"
description = "AI-powered language learning application with Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["language-learning", "ai", "chatbot", "clean-architecture"]
authors = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # AI Providers
    "openai>=1.0.0",
    
    # Graph Database
    "neo4j>=5.0.0",
    "graphiti-core>=0.1.0",
    
    # API
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    
    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
polyglot = "polyglot_ai.entrypoints.cli.main:main"

[project.urls]
Documentation = "https://github.com/you/polyglot-ai#readme"
Issues = "https://github.com/you/polyglot-ai/issues"
Source = "https://github.com/you/polyglot-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "graphiti_core.*",
    "neo4j.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["polyglot_ai"]
