[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyglot-ai"
version = "0.1.0"
description = "Language learning application with Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Lucas Loustalet", email = "lucas.loustalet2002@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]

# Le Core et l'Application ne dépendent d'aucune bibliothèque externe.
dependencies = []

[project.optional-dependencies]
# Adapters
ai = ["openai>=1.0.0"]
database = ["neo4j>=5.0.0"]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
# Development environment
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
